...

    <!-- AddButton -->
    <string name="add_button_add_listing">Add listing</string>
    <string name="add_button_add_review">Add review</string>

    <!-- BrowseCityScreen -->
    <string name="browse_city_no_residencies_yet">No residencies yet.</string>
    <string name="browse_city_no_listings_yet">No listings yet.</string>
    <string name="browse_city_no_listings_match_filter">No listings match your filters.</string>
    <string name="browse_city_clear_filters">Clear filters</string>
    <string name="browse_city_clear_all">Clear All</string>
    <string name="browse_city_filter_by_room_type">Filter by Room Type</string>
    <string name="browse_city_filter_by_price">Filter by Price</string>
...
